--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,14 +4,14 @@
 
 :root {
     --foreground-rgb: 0, 0, 0;
-    --background-start-rgb: 214, 219, 220;
+    /*--background-start-rgb: 214, 219, 220;*/
     --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
         --foreground-rgb: 255, 255, 255;
-        --background-start-rgb: 0, 0, 0;
+        /*--background-start-rgb: 0, 0, 0;*/
         --background-end-rgb: 0, 0, 0;
     }
 }
@@ -22,7 +22,7 @@ body {
             to bottom,
             transparent,
             rgb(var(--background-end-rgb))
-    ) rgb(var(--background-start-rgb));
+    ) /*rgb(var(--background-start-rgb));*/
 }
 
 @layer utilities {
