--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,67 @@
 @tailwind components;
 @tailwind utilities;
 
+
+h1 {
+    font-size: 2em;
+    font-weight: bold;
+    margin-top: 0.67em;
+    margin-bottom: 0.67em;
+}
+h2 {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin-top: 0.83em;
+    margin-bottom: 0.83em;
+}
+h3 {
+    font-size: 1.17em;
+    font-weight: bold;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+h4 {
+    margin-top: 1.33em;
+    margin-bottom: 1.33em;
+    font-weight: bold;
+}
+h5 {
+    font-size: .83em;
+    margin-top: 1.67em;
+    margin-bottom: 1.67em;
+    font-weight: bold;
+}
+h6 {
+    font-size: .67em;
+    margin-top: 2.33em;
+    margin-bottom: 2.33em;
+    font-weight: bold;
+}
+
+a {
+    color: #21346d;
+    cursor: pointer;
+}
+
+ul {
+    list-style-type: disc;       /* Bullets */
+    margin-block-start: 1em;     /* Vertical spacing before */
+    margin-block-end: 1em;       /* Vertical spacing after */
+    padding-inline-start: 40px;  /* Indentation */
+}
+
+ol {
+    list-style-type: decimal;    /* Numbers */
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    padding-inline-start: 40px;
+}
+
+li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
+
 :root {
     --foreground-rgb: 0, 0, 0;
     /*--background-start-rgb: 214, 219, 220;*/
